update task week 6

--- a/TaskWeek6/TaskWeek6/TaskWeek6/TaskWeek6.csproj
+++ b/TaskWeek6/TaskWeek6/TaskWeek6/TaskWeek6.csproj
@@ -29,6 +29,9 @@
     <EmbeddedResource Update="Views\HomePageMaster.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\ListImageView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\LoginPageView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
