--- a/TaskWeek6/TaskWeek6/TaskWeek6.Android/TaskWeek6.Android.csproj
+++ b/TaskWeek6/TaskWeek6/TaskWeek6.Android/TaskWeek6.Android.csproj
@@ -110,9 +110,14 @@
   <ItemGroup>
     <AndroidResource Include="Resources\mipmap-xxxhdpi\UserICON.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\maleIcon.png" />
+  </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\UserICON.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\securityIcon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
